assets/deployments/iba-bis/iba-bis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iba-bis
  annotations:
      traefik.ingress.kubernetes.io/affinity: "true"
      traefik.ingress.kubernetes.io/session-cookie-name: "replica"
spec:
  selector:
    app: iba-bis
  ports:
  - name: iba-bis1
    protocol: TCP
    port: 8081
    targetPort: 8080
  - name: iba-bis2
    protocol: TCP
    port: 8010
    targetPort: 8009

#  externalIPs:
#  - 10.10.10.70
#  type: LoadBalancer
